--- a/piglatin/pom.xml
+++ b/piglatin/pom.xml
@@ -9,5 +9,10 @@
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-lang</groupId>
+  		<artifactId>commons-lang</artifactId>
+  		<version>20030203.000129</version>
+  	</dependency>
   </dependencies>
 </project>
